# webots_ros2_gen3

./: CMakeLists.txt  Readme.md  moveit_action_client.py  package.xml  webots_ros2_gen3.repos
.github/workflows/: test_ros2_humble.yml
config/: ros2_control.urdf  ros2_controllers.yaml
controllers/cube_randomizer/: cube_randomizer.py
launch/: moveit_launch.py  robot_launch.py  servo_launch.py
protos/: GEN3-6DOF_VISION.proto  Robotiq2f140Gripper.proto  Robotiq2f85Gripper.proto
python/: bc_image_joint.json  bc_image_joint.yaml  complete_episode.py  gripper_action_client.py  robomimic_dataset_metadata.json  robomimic_logger.py  run_policy.py  train_robomimic.sh
resource/: gen3.urdf  moveit_controllers.yaml  moveit_gen3.srdf  moveit_joint_limits.yaml  moveit_kinematics.yaml  moveit_movegroup.yaml  moveit_servo.yaml  moveit_visualization.rviz
src/: mimic_gripper_finger.cpp
tests/: test_webots_moveit.py
urdf/: gen3.urdf
worlds/: gen3.wbt
